--- a/Registro/app/src/main/res/layout/healt_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/healt_data_fragment.xml
@@ -66,7 +66,8 @@
                 android:textColorHint="@color/gray"
                 android:inputType="number"
                 android:singleLine="true"
-                android:text="75"/>
+                android:maxLength="3"
+                android:text="37"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -77,21 +78,33 @@
             android:layout_marginRight="20dp"
             android:orientation="horizontal" >
 
-            <com.jaredrummler.materialspinner.MaterialSpinner
-                android:id="@+id/spinnerGender"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray"
-                />
-            <View
-                android:layout_below="@+id/spinnerGender"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="-5dp"
-                android:background="@color/green_toolbar"/>
+           <RadioGroup
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:orientation="horizontal"
+               android:weightSum="90">
+               <RadioButton
+                   android:id="@+id/rdMas"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="30"
+                   android:text="Masculino"
+                   android:textSize="16sp"
+                   android:textColor="@color/gray"
+                   android:theme="@style/MyRadioButtonStyle"/>
+               <RadioButton
+                   android:id="@+id/rdFem"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="30"
+                   android:text="Femenino"
+                   android:textSize="16sp"
+                   android:textColor="@color/gray"
+                   android:theme="@style/MyRadioButtonStyle"/>
+
+           </RadioGroup>
 
         </RelativeLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -104,7 +117,8 @@
                 android:id="@+id/checkCronic"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="10" />
+                android:layout_weight="10"
+                android:theme="@style/MycheckBoxStyle" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
