--- a/Registro/app/src/main/res/values/styles.xml
+++ b/Registro/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:checkboxStyle">@style/MycheckBoxStyle</item>
+        <item name="android:radioButtonStyle">@style/MyRadioButtonStyle</item>
     </style>
-
+    <style name="MycheckBoxStyle" parent="Base.Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="android:colorControlNormal">@color/gray</item>
+        <item name="android:colorControlActivated">@color/green_toolbar</item>
+    </style>
+    <style name="MyRadioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:colorControlNormal">@color/gray</item>
+        <item name="android:colorControlActivated">@color/green_toolbar</item>
+    </style>
 </resources>
