--- a/Registro/app/src/main/res/layout/dialog_error.xml
+++ b/Registro/app/src/main/res/layout/dialog_error.xml
@@ -1,20 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:padding="10dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp" >
-    <TextView
-        android:id="@+id/txtMensaje"
+    android:layout_height="wrap_content"
+    android:background="#ffffffff">
+
+    <ImageView
         android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:id="@+id/a"
+        android:gravity="center"
+        android:background="#DA5F6A"
+        android:scaleType="fitCenter"
+        android:src="@drawable/alert"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:textSize="20sp"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="Mensaje de Error"
-        android:textColor="@color/white"/>
+        android:text="TEXTO"
+        android:id="@+id/text_dialog"
+        android:layout_below="@+id/a"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="18sp"
+        android:textColor="#ff000000"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal" />
 
 
 </RelativeLayout>
