--- a/Registro/app/src/main/res/layout/list_item_header_footer.xml
+++ b/Registro/app/src/main/res/layout/list_item_header_footer.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/green_toolbar">
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/txt_title"
