--- a/Registro/app/src/main/res/layout/list_item_sample.xml
+++ b/Registro/app/src/main/res/layout/list_item_sample.xml
@@ -14,10 +14,11 @@
         android:gravity="center"/>
 
     <Button
-        android:id="@+id/btn_go"
+        android:id="@+id/btn_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"
-        android:text="Go" />
+        android:textColor="@color/white"
+        android:text="Ver" />
 
 </FrameLayout>
