--- a/Registro/app/src/main/res/layout/market_activity.xml
+++ b/Registro/app/src/main/res/layout/market_activity.xml
@@ -18,16 +18,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:paddingBottom="25dp">
-            <ru.dimorinny.floatingtextbutton.FloatingTextButton
+            <Button
                 android:id="@+id/action_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:floating_background_color="@color/green_toolbar"
-                app:floating_left_icon="@drawable/cart"
-                app:floating_title="Comprar"
                 android:layout_gravity="center_horizontal"
-                app:floating_title_color="@android:color/white"
-                />
+                android:text="Comprar"
+                android:background="@drawable/button_rounded_selector"
+                android:textColor="@color/white"
+
+                android:theme="@style/Widget.AppCompat.Button.Colored"
+                 />
         </RelativeLayout>
 
     </FrameLayout>
