--- a/Promotor/app/src/main/res/layout/credential_fragment.xml
+++ b/Promotor/app/src/main/res/layout/credential_fragment.xml
@@ -7,17 +7,22 @@
     android:weightSum="100"
     android:background="@color/white">
     <RelativeLayout
+        android:id="@+id/rlImgFront"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"  >
+        android:layout_weight="40"
+        android:gravity="center">
         <ImageView
             android:id="@+id/imgFrontId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/add_photo"
+            />
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rlImgBack"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="40"
@@ -26,7 +31,8 @@
             android:id="@+id/imgBackId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/add_photo"/>
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/llyBoton"
