--- a/Promotor/app/src/main/res/values/attrs.xml
+++ b/Promotor/app/src/main/res/values/attrs.xml
@@ -77,4 +77,15 @@
         <attr name="backgroundSelector" format="integer"/>
         <attr name="textTint" format="color"/>
     </declare-styleable>
+
+    <declare-styleable name="DotProgressBar">
+        <attr name="startColor" format="color"/>
+        <attr name="endColor" format="color"/>
+        <attr name="duration" format="integer"/>
+        <attr name="amount" format="integer"/>
+        <attr name="animationDirection" format="enum">
+            <enum name="right" value="1"/>
+            <enum name="left" value="-1"/>
+        </attr>
+    </declare-styleable>
 </resources>
