--- a/Promotor/app/src/main/res/layout/item.xml
+++ b/Promotor/app/src/main/res/layout/item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="125dp"
     android:padding="3dp"
     android:background="@color/white"
     android:weightSum="100"
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/green_text"
+        android:padding="5dp"
         android:text="NOMBRE"/>
 
 
@@ -22,16 +23,22 @@
 <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="50">
+        android:layout_weight="50"
+       >
         <TextView
             android:id="@+id/client_mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/green_text"
+            android:textColor="@color/gray"
             android:text="MAIL"
+            android:gravity="center"
             />
     </RelativeLayout>
 
 
-
+    <View
+        android:layout_below="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/green_toolbar"/>
 </LinearLayout>
