--- a/Registro/app/src/main/res/layout/main_activity.xml
+++ b/Registro/app/src/main/res/layout/main_activity.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/green_toolbar"/>
-    <com.libre.registro.ui.util.NonSwipeableViewPager
+    <com.libre.escuadroncliente.ui.util.NonSwipeableViewPager
         android:id="@+id/id_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
