--- a/Registro/app/src/main/res/layout/credential_fragment.xml
+++ b/Registro/app/src/main/res/layout/credential_fragment.xml
@@ -9,12 +9,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"  >
+        android:layout_weight="40"
+        android:gravity="center"   >
         <ImageView
             android:id="@+id/imgFrontId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/add_photo"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -26,7 +28,9 @@
             android:id="@+id/imgBackId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/add_photo"
+            android:visibility="gone"/>
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/llyBoton"
