--- a/Registro/app/src/main/res/layout/personal_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/personal_data_fragment.xml
@@ -66,7 +66,7 @@
                 android:textColorHint="@color/gray"
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
-                android:text="hgallardo_dv@hotmail.com"/>
+                android:text="prueba_correo@hotmail.com"/>
         </RelativeLayout>
 
         <RelativeLayout
