--- a/Registro/app/src/main/res/values/styles.xml
+++ b/Registro/app/src/main/res/values/styles.xml
@@ -22,4 +22,13 @@
         <item name="android:colorBackground">@color/green_toolbar</item>
 
     </style>
+
+    <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!--buttons color-->
+        <item name="colorAccent">@color/green_text</item>
+        <!--title and message color-->
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <!--dialog background-->
+        <item name="android:windowBackground">@drawable/dialog_background</item>
+    </style>
 </resources>
