--- a/Promotor/app/src/main/res/layout/list_users.xml
+++ b/Promotor/app/src/main/res/layout/list_users.xml
@@ -21,8 +21,7 @@
             android:layout_height="56dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="24dp"
-            app:tbm_backgroundColor="@color/green_toolbar"
-             >
+            app:tbm_backgroundColor="@color/green_toolbar">
 
             <ImageView
                 android:id="@+id/imgUpload"
